--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.0",
     "gsap": "^3.12.5",
+    "isomorphic-dompurify": "^2.34.0",
     "lucide-react": "^0.445.0",
     "next": "^15.0.0",
     "react": "^18.3.0",
